--- a/examples/index.html
+++ b/examples/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <script src="blackjack.js"></script>
 </head>
 
