html and js working together

--- a/examples/index.html
+++ b/examples/index.html
@@ -3,12 +3,19 @@
 
 <head>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-    <script src="blackjack.js"></script>
+
 </head>
 
 <body>
-<h1>Hello world!</h1>
+<h1 id="title">Welcome to blackjack!</h1>
+<h4>By Pradeep</h4>
+<p id="text-area">This is some text</p>
+
+<button id="new-game-button">New Game!</button>
+<button id="hit-button">Hit!</button>
+<button id="stay-button">Stay!</button>
+
+<script src="blackjack.js"></script>
 </body>
 
 </html>
